--- a/CustomTransitionDemo/Scenes/Storyboard/Base.lproj/Main.storyboard
+++ b/CustomTransitionDemo/Scenes/Storyboard/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="abc" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kZz-Ui-SJx">
+                            <textField opaque="NO" tag="99" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kZz-Ui-SJx">
                                 <rect key="frame" x="8" y="32" width="359" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="zd0-GM-CM9"/>
